Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3546

impalad fails to start on rhel5 ec2: Check failed: cache_line_sizes_[0] == 64 (0 vs. 64)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.6.0
    • Impala 2.6.0
    • Backend

    Description

      While trying to setup a test job on ec2 for centos 5, impalad wont start due to

      WARNING: Logging before InitGoogleLogging() is written to STDERR
      F0515 15:19:51.792044 31756 cpu-info.cc:142] Check failed: cache_line_sizes_[0] == 64 (0 vs. 64) Impala expects 64-byte L1 cache lines
      

      Cpu info

      $ cat /proc/cpuinfo
      processor	: 0
      vendor_id	: GenuineIntel
      cpu family	: 6
      model		: 45
      model name	:        Intel(R) Xeon(R) CPU E5-2665 0 @ 2.40GHz
      stepping	: 7
      cpu MHz		: 2394.230
      cache size	: 20480 KB
      physical id	: 0
      siblings	: 1
      core id		: 0
      cpu cores	: 1
      fpu		: yes
      fpu_exception	: yes
      cpuid level	: 13
      wp		: yes
      flags		: fpu de tsc msr pae cx8 apic sep cmov pat clflush acpi mmx fxsr sse sse2 ss ht syscall nx lm constant_tsc arat pni ssse3 cx16 sse4_1 sse4_2 popcnt lahf_lm
      bogomips	: 5997.69
      clflush size	: 64
      cache_alignment	: 64
      address sizes	: 46 bits physical, 48 bits virtual
      power management:
      

      The jenkins job is http://sandbox.jenkins.cloudera.com/view/Impala/view/Evergreen-cdh5-trunk/job/impala-cdh5-trunk-exhaustive-rhel5/46/console

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            caseyc casey
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: