IMPALA-3546: don't die if sysconf() reports bogus cache info

With RHEL5 on AWS EC2 for example, sysconf() returns bad info about
cache line sizes. We should tolerate this instead of bringing down
impalad.

Change-Id: Id4d61b05fe213028a7e9aaabe98adc2792b90e07
Reviewed-on: http://gerrit.cloudera.org:8080/3111
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Internal Jenkins